# OOP-CPP-Laboratory_4

./: CMakeLists.txt  README.md  main.cpp
include/: arrayoffigures.h  figure.h  hexagon.h  pentagon.h  point.h  rectangle.h  rhombus.h  trapezoid.h
src/: README.md  arrayoffigures.cpp  rectangle.cpp  rgombus.cpp  rhombus.cpp  trapezoid.cpp
tests/: test_arrayoffigures.cpp  test_rectangle.cpp  test_rhombus.cpp  test_trapezoid.cpp
